fixed spacing issue

--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -69,7 +69,7 @@
           font-family: century gothic;
           text-transform: uppercase;
           position: relative;
-          top: -.4em;
+          top: -7px;
           font-weight: 600;
 
           a {
